[GridDyna] Add some batch CRUD endpoints (#111)